tests/contract_testcases/polkadot/mappings/bad_mapping_declares_03.sol

        contract c {
            mapping(int => address) data;
            mapping(data => address) data2;
        }
// ---- Expect: diagnostics ----
// error: 4:21-25: 'data' is a contract variable
